cello2-webapp/src/main/webapp/assets/editors/parser/STLParser.js
// Generated from STL.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var STLListener = require('./STLListener').STLListener;
var grammarFileName = "STL.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'=>'", "'_'", "'&&'", "'||'", "'<<'", "'>>'", 
                     "'#'", "'('", "','", "')'", "'='", "'!'", "'F'", "'['", 
                     "']'", "'G'", "'U'", "'^'", "'-('", "'sqrt('", "'log('", 
                     "'ln('", "'abs('", "'der('", "'int('", "'*'", "'/'", 
                     "'+'", "'-'", "'<'", "'<='", "'>='", "'>'", "'{'", 
                     "'}'", "'@'", "':'", "'max'", "'min'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, "BOOLEAN", "VARIABLE", "RATIONAL", 
                      "WS", "NEWLINE", "SL_COMMENT" ];

var ruleNames =  [ "specification", "module", "moduleDescription", "property", 
                   "expr", "booleanExpr", "translationMap", "translationPair", 
                   "limitMap", "limitPair" ];

function STLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

STLParser.prototype = Object.create(antlr4.Parser.prototype);
STLParser.prototype.constructor = STLParser;

Object.defineProperty(STLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

STLParser.EOF = antlr4.Token.EOF;
STLParser.T__0 = 1;
STLParser.T__1 = 2;
STLParser.T__2 = 3;
STLParser.T__3 = 4;
STLParser.T__4 = 5;
STLParser.T__5 = 6;
STLParser.T__6 = 7;
STLParser.T__7 = 8;
STLParser.T__8 = 9;
STLParser.T__9 = 10;
STLParser.T__10 = 11;
STLParser.T__11 = 12;
STLParser.T__12 = 13;
STLParser.T__13 = 14;
STLParser.T__14 = 15;
STLParser.T__15 = 16;
STLParser.T__16 = 17;
STLParser.T__17 = 18;
STLParser.T__18 = 19;
STLParser.T__19 = 20;
STLParser.T__20 = 21;
STLParser.T__21 = 22;
STLParser.T__22 = 23;
STLParser.T__23 = 24;
STLParser.T__24 = 25;
STLParser.T__25 = 26;
STLParser.T__26 = 27;
STLParser.T__27 = 28;
STLParser.T__28 = 29;
STLParser.T__29 = 30;
STLParser.T__30 = 31;
STLParser.T__31 = 32;
STLParser.T__32 = 33;
STLParser.T__33 = 34;
STLParser.T__34 = 35;
STLParser.T__35 = 36;
STLParser.T__36 = 37;
STLParser.T__37 = 38;
STLParser.T__38 = 39;
STLParser.BOOLEAN = 40;
STLParser.VARIABLE = 41;
STLParser.RATIONAL = 42;
STLParser.WS = 43;
STLParser.NEWLINE = 44;
STLParser.SL_COMMENT = 45;

STLParser.RULE_specification = 0;
STLParser.RULE_module = 1;
STLParser.RULE_moduleDescription = 2;
STLParser.RULE_property = 3;
STLParser.RULE_expr = 4;
STLParser.RULE_booleanExpr = 5;
STLParser.RULE_translationMap = 6;
STLParser.RULE_translationPair = 7;
STLParser.RULE_limitMap = 8;
STLParser.RULE_limitPair = 9;

function SpecificationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLParser.RULE_specification;
    this.spec = null; // ModuleContext
    return this;
}

SpecificationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SpecificationContext.prototype.constructor = SpecificationContext;

SpecificationContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(STLParser.NEWLINE);
    } else {
        return this.getToken(STLParser.NEWLINE, i);
    }
};


SpecificationContext.prototype.module = function() {
    return this.getTypedRuleContext(ModuleContext,0);
};

SpecificationContext.prototype.limitMap = function() {
    return this.getTypedRuleContext(LimitMapContext,0);
};

SpecificationContext.prototype.moduleDescription = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ModuleDescriptionContext);
    } else {
        return this.getTypedRuleContext(ModuleDescriptionContext,i);
    }
};

SpecificationContext.prototype.translationMap = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TranslationMapContext);
    } else {
        return this.getTypedRuleContext(TranslationMapContext,i);
    }
};

SpecificationContext.prototype.enterRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.enterSpecification(this);
	}
};

SpecificationContext.prototype.exitRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.exitSpecification(this);
	}
};




STLParser.SpecificationContext = SpecificationContext;

STLParser.prototype.specification = function() {

    var localctx = new SpecificationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, STLParser.RULE_specification);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 20;
        localctx.spec = this.module(0);
        this.state = 21;
        this.match(STLParser.NEWLINE);
        this.state = 22;
        this.match(STLParser.NEWLINE);
        this.state = 26; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 23;
            this.moduleDescription();
            this.state = 24;
            this.match(STLParser.NEWLINE);
            this.state = 28; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===STLParser.VARIABLE);
        this.state = 30;
        this.match(STLParser.NEWLINE);
        this.state = 34; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 31;
        		this.translationMap();
        		this.state = 32;
        		this.match(STLParser.NEWLINE);
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 36; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );

        this.state = 38;
        this.limitMap();
        this.state = 39;
        this.match(STLParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ModuleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLParser.RULE_module;
    return this;
}

ModuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleContext.prototype.constructor = ModuleContext;


 
ModuleContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function ModuleLeafContext(parser, ctx) {
	ModuleContext.call(this, parser);
    this.moduleName = null; // Token;
    ModuleContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ModuleLeafContext.prototype = Object.create(ModuleContext.prototype);
ModuleLeafContext.prototype.constructor = ModuleLeafContext;

STLParser.ModuleLeafContext = ModuleLeafContext;

ModuleLeafContext.prototype.VARIABLE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(STLParser.VARIABLE);
    } else {
        return this.getToken(STLParser.VARIABLE, i);
    }
};

ModuleLeafContext.prototype.enterRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.enterModuleLeaf(this);
	}
};

ModuleLeafContext.prototype.exitRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.exitModuleLeaf(this);
	}
};


function ModuleOpContext(parser, ctx) {
	ModuleContext.call(this, parser);
    this.left = null; // ModuleContext;
    this.op = null; // Token;
    this.tmap = null; // Token;
    this.right = null; // ModuleContext;
    ModuleContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ModuleOpContext.prototype = Object.create(ModuleContext.prototype);
ModuleOpContext.prototype.constructor = ModuleOpContext;

STLParser.ModuleOpContext = ModuleOpContext;

ModuleOpContext.prototype.module = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ModuleContext);
    } else {
        return this.getTypedRuleContext(ModuleContext,i);
    }
};

ModuleOpContext.prototype.VARIABLE = function() {
    return this.getToken(STLParser.VARIABLE, 0);
};
ModuleOpContext.prototype.enterRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.enterModuleOp(this);
	}
};

ModuleOpContext.prototype.exitRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.exitModuleOp(this);
	}
};



STLParser.prototype.module = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ModuleContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 2;
    this.enterRecursionRule(localctx, 2, STLParser.RULE_module, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        localctx = new ModuleLeafContext(this, localctx);
        this._ctx = localctx;
        _prevctx = localctx;

        this.state = 42;
        localctx.moduleName = this.match(STLParser.VARIABLE);
        this.state = 43;
        this.match(STLParser.T__7);
        this.state = 44;
        this.match(STLParser.VARIABLE);
        this.state = 49;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===STLParser.T__8) {
            this.state = 45;
            this.match(STLParser.T__8);
            this.state = 46;
            this.match(STLParser.VARIABLE);
            this.state = 51;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 52;
        this.match(STLParser.T__9);
        this._ctx.stop = this._input.LT(-1);
        this.state = 86;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 84;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new ModuleOpContext(this, new ModuleContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_module);
                    this.state = 54;
                    if (!( this.precpred(this._ctx, 7))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
                    }
                    this.state = 55;
                    localctx.op = this.match(STLParser.T__0);
                    this.state = 56;
                    this.match(STLParser.T__1);
                    this.state = 57;
                    localctx.tmap = this.match(STLParser.VARIABLE);
                    this.state = 58;
                    localctx.right = this.module(8);
                    break;

                case 2:
                    localctx = new ModuleOpContext(this, new ModuleContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_module);
                    this.state = 59;
                    if (!( this.precpred(this._ctx, 6))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
                    }
                    this.state = 60;
                    localctx.op = this.match(STLParser.T__2);
                    this.state = 61;
                    this.match(STLParser.T__1);
                    this.state = 62;
                    localctx.tmap = this.match(STLParser.VARIABLE);
                    this.state = 63;
                    localctx.right = this.module(7);
                    break;

                case 3:
                    localctx = new ModuleOpContext(this, new ModuleContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_module);
                    this.state = 64;
                    if (!( this.precpred(this._ctx, 5))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
                    }
                    this.state = 65;
                    localctx.op = this.match(STLParser.T__3);
                    this.state = 66;
                    this.match(STLParser.T__1);
                    this.state = 67;
                    localctx.tmap = this.match(STLParser.VARIABLE);
                    this.state = 68;
                    localctx.right = this.module(6);
                    break;

                case 4:
                    localctx = new ModuleOpContext(this, new ModuleContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_module);
                    this.state = 69;
                    if (!( this.precpred(this._ctx, 4))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                    }
                    this.state = 70;
                    localctx.op = this.match(STLParser.T__4);
                    this.state = 71;
                    this.match(STLParser.T__1);
                    this.state = 72;
                    localctx.tmap = this.match(STLParser.VARIABLE);
                    this.state = 73;
                    localctx.right = this.module(5);
                    break;

                case 5:
                    localctx = new ModuleOpContext(this, new ModuleContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_module);
                    this.state = 74;
                    if (!( this.precpred(this._ctx, 3))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                    }
                    this.state = 75;
                    localctx.op = this.match(STLParser.T__5);
                    this.state = 76;
                    this.match(STLParser.T__1);
                    this.state = 77;
                    localctx.tmap = this.match(STLParser.VARIABLE);
                    this.state = 78;
                    localctx.right = this.module(4);
                    break;

                case 6:
                    localctx = new ModuleOpContext(this, new ModuleContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_module);
                    this.state = 79;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 80;
                    localctx.op = this.match(STLParser.T__6);
                    this.state = 81;
                    this.match(STLParser.T__1);
                    this.state = 82;
                    localctx.tmap = this.match(STLParser.VARIABLE);
                    this.state = 83;
                    localctx.right = this.module(3);
                    break;

                } 
            }
            this.state = 88;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function ModuleDescriptionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLParser.RULE_moduleDescription;
    this.moduleName = null; // Token
    this.moduleFormula = null; // PropertyContext
    return this;
}

ModuleDescriptionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleDescriptionContext.prototype.constructor = ModuleDescriptionContext;

ModuleDescriptionContext.prototype.VARIABLE = function() {
    return this.getToken(STLParser.VARIABLE, 0);
};

ModuleDescriptionContext.prototype.property = function() {
    return this.getTypedRuleContext(PropertyContext,0);
};

ModuleDescriptionContext.prototype.enterRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.enterModuleDescription(this);
	}
};

ModuleDescriptionContext.prototype.exitRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.exitModuleDescription(this);
	}
};




STLParser.ModuleDescriptionContext = ModuleDescriptionContext;

STLParser.prototype.moduleDescription = function() {

    var localctx = new ModuleDescriptionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, STLParser.RULE_moduleDescription);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 89;
        localctx.moduleName = this.match(STLParser.VARIABLE);
        this.state = 90;
        this.match(STLParser.T__10);
        this.state = 91;
        localctx.moduleFormula = this.property(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PropertyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLParser.RULE_property;
    return this;
}

PropertyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PropertyContext.prototype.constructor = PropertyContext;


 
PropertyContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function BooleanPredContext(parser, ctx) {
	PropertyContext.call(this, parser);
    PropertyContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BooleanPredContext.prototype = Object.create(PropertyContext.prototype);
BooleanPredContext.prototype.constructor = BooleanPredContext;

STLParser.BooleanPredContext = BooleanPredContext;

BooleanPredContext.prototype.booleanExpr = function() {
    return this.getTypedRuleContext(BooleanExprContext,0);
};
BooleanPredContext.prototype.enterRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.enterBooleanPred(this);
	}
};

BooleanPredContext.prototype.exitRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.exitBooleanPred(this);
	}
};


function FormulaContext(parser, ctx) {
	PropertyContext.call(this, parser);
    this.left = null; // PropertyContext;
    this.op = null; // Token;
    this.child = null; // PropertyContext;
    this.low = null; // Token;
    this.high = null; // Token;
    this.right = null; // PropertyContext;
    PropertyContext.prototype.copyFrom.call(this, ctx);
    return this;
}

FormulaContext.prototype = Object.create(PropertyContext.prototype);
FormulaContext.prototype.constructor = FormulaContext;

STLParser.FormulaContext = FormulaContext;

FormulaContext.prototype.property = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PropertyContext);
    } else {
        return this.getTypedRuleContext(PropertyContext,i);
    }
};

FormulaContext.prototype.RATIONAL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(STLParser.RATIONAL);
    } else {
        return this.getToken(STLParser.RATIONAL, i);
    }
};

FormulaContext.prototype.enterRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.enterFormula(this);
	}
};

FormulaContext.prototype.exitRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.exitFormula(this);
	}
};


function ParpropContext(parser, ctx) {
	PropertyContext.call(this, parser);
    this.child = null; // PropertyContext;
    PropertyContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ParpropContext.prototype = Object.create(PropertyContext.prototype);
ParpropContext.prototype.constructor = ParpropContext;

STLParser.ParpropContext = ParpropContext;

ParpropContext.prototype.property = function() {
    return this.getTypedRuleContext(PropertyContext,0);
};
ParpropContext.prototype.enterRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.enterParprop(this);
	}
};

ParpropContext.prototype.exitRule = function(listener) {
    if(listener instanceof STLListener ) {
        listener.exitParprop(this);
	}
};



STLParser.prototype.property = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new PropertyContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 6;
    this.enterRecursionRule(localctx, 6, STLParser.RULE_property, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 115;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            localctx = new ParpropContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 94;
            this.match(STLParser.T__7);
            this.state = 95;
            localctx.child = this.property(0);
            this.state = 96;
            this.match(STLParser.T__9);
            break;

        case 2:
            localctx = new BooleanPredContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 98;
            this.booleanExpr();
            break;

        case 3:
            localctx = new FormulaContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 99;
            localctx.op = this.match(STLParser.T__11);
            this.state = 100;
            localctx.child = this.property(11);
            break;

        case 4:
            localctx = new FormulaContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 101;
            localctx.op = this.match(STLParser.T__12);
            this.state = 102;
            this.match(STLParser.T__13);
            this.state = 103;
            localctx.low = this.match(STLParser.RATIONAL);
            this.state = 104;
            this.match(STLParser.T__8);
            this.state = 105;
            localctx.high = this.match(STLParser.RATIONAL);
            this.state = 106;
            this.match(STLParser.T__14);
            this.state = 107;
            localctx.child = this.property(10);
            break;

        case 5:
            localctx = new FormulaContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 108;
            localctx.op = this.match(STLParser.T__15);
            this.state = 109;
            this.match(STLParser.T__13);
            this.state = 110;
            localctx.low = this.match(STLParser.RATIONAL);
            this.state = 111;
            this.match(STLParser.T__8);
            this.state = 112;
            localctx.high = this.match(STLParser.RATIONAL);
            this.state = 113;
            this.match(STLParser.T__14);
            this.state = 114;
            localctx.child = this.property(9);
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 148;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 146;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 117;
                    if (!( this.precpred(this._ctx, 8))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
                    }
                    this.state = 118;
                    localctx.op = this.match(STLParser.T__0);
                    this.state = 119;
                    localctx.right = this.property(9);
                    break;

                case 2:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 120;
                    if (!( this.precpred(this._ctx, 7))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
                    }
                    this.state = 121;
                    localctx.op = this.match(STLParser.T__2);
                    this.state = 122;
                    localctx.right = this.property(8);
                    break;

                case 3:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 123;
                    if (!( this.precpred(this._ctx, 6))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
                    }
                    this.state = 124;
                    localctx.op = this.match(STLParser.T__3);
                    this.state = 125;
                    localctx.right = this.property(7);
                    break;

                case 4:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 126;
                    if (!( this.precpred(this._ctx, 5))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
                    }
                    this.state = 127;
                    localctx.op = this.match(STLParser.T__4);
                    this.state = 128;
                    localctx.right = this.property(6);
                    break;

                case 5:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 129;
                    if (!( this.precpred(this._ctx, 4))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                    }
                    this.state = 130;
                    localctx.op = this.match(STLParser.T__5);
                    this.state = 131;
                    localctx.right = this.property(5);
                    break;

                case 6:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 132;
                    if (!( this.precpred(this._ctx, 3))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                    }
                    this.state = 133;
                    localctx.op = this.match(STLParser.T__6);
                    this.state = 134;
                    localctx.right = this.property(4);
                    break;

                case 7:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 135;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 136;
                    localctx.op = this.match(STLParser.T__16);
                    this.state = 137;
                    this.match(STLParser.T__13);
                    this.state = 138;
                    localctx.low = this.match(STLParser.RATIONAL);
                    this.state = 139;
                    this.match(STLParser.T__8);
                    this.state = 140;
                    localctx.high = this.match(STLParser.RATIONAL);
                    this.state = 141;
                    this.match(STLParser.T__14);
                    this.state = 142;
                    localctx.right = this.property(3);
                    break;

                case 8:
                    localctx = new FormulaContext(this, new PropertyContext(this, _parentctx, _parentState));
                    localctx.left = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, STLParser.RULE_property);
                    this.state = 143;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 144;
                    localctx.op = this.match(STLParser.T__17);
                    this.state = 145;
                    localctx.right = this.property(2);
                    break;

                } 
            }
            this.state = 150;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;
